# Aqua-Engine

./: .gitmodules  CMakeLists.txt
include/aqua/: Assert.h  Build.h  Config.h  CrashReport.h  Debug.h  Error.h  Logger.h  Platform.h  Reflection.h  System.h  pch.h
include/aqua/datastructures/: Array.h  HandleSet.h  Queue.h  String.h  StringBuffer.h  Tree.h
include/aqua/engine/: Defines.h  Engine.h  Event.h  EventSystem.h  ForwardSystems.h  GraphicsAPI.h  LayerSystem.h  MemorySystem.h  RenderHardwareInterface.h  Window.h  WindowSystem.h
include/aqua/engine/graphics/api/: VulkanAPI.h
include/aqua/engine/graphics/wapi/: GLFWAPI.h
include/aqua/math/: Random.h  Vector.h
include/aqua/utility/: Memory.h  Register.h  Serializer.h  StringLiteral.h  TemplateUtility.h
src/: Config.cpp  CrashReport.cpp  Engine.cpp  Error.cpp  Event.cpp  EventSystem.cpp  GLFWAPI.cpp  GraphicsAPI.cpp  HandleSet.cpp  LayerSystem.cpp  Logger.cpp  MemorySystem.cpp  Platform.cpp  Random.cpp  Reflection.cpp  RenderHardwareInterface.cpp  Serializer.cpp  String.cpp  System.cpp  VulkanAPI.cpp  Window.cpp  WindowSystem.cpp
test/sandbox/: main.cpp
utility/logger/: Logger.cpp
utility/shadercompiler/: Compiler.cpp  Compiler.h  Parser.cpp  Parser.h  Reflection.cpp  Reflection.h  ShaderCompiler.cpp
